...
            .background(MaterialTheme.colorScheme.tertiary)
            .clickable(onClick = onClick),
        contentAlignment = Alignment.Center
    ) {
        Image(
            painter = painterResource(id = R.drawable.backspace),
            contentDescription = "Backspace",
            modifier = Modifier.size(24.dp)
        )
    }
}
